2009-05-22  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added the ability to execute command when download starts and
	stops. You can also specify command for particular cases such as
	complete/error download.  Added --on-download-start,
	--on-download-stop, --on-download-complete and --on-download-error
	option.
	* src/OptionHandlerFactory.cc
	* src/RequestGroupMan.cc
	* src/prefs.cc
	* src/prefs.h
	* src/usage_text.h

2009-05-22  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed test error
	* test/BencodeTest.cc

2009-05-22  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added unit tests.
	* test/XmlRpcMethodTest.cc

2009-05-22  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Made exception message more verbose.
	* src/bencode.cc

2009-05-19  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Abbreviated KiB/s to KiBs and its precision decreased to 1 to save
	space in console readout. Also they are now shown in MiB/s if
	speed > 1024KiB/s.
	* src/ConsoleStatCalc.cc

2009-05-19  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added SEED to console output, which represents the number of
	seeders currently the client is connecting to.	
	* src/ConsoleStatCalc.cc
	* src/ConsoleStatCalc.h
	* src/DownloadEngine.cc
	* src/NullStatCalc.h
	* src/StatCalc.h

2009-05-18  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added source filename(__FILE__) and line number(__LINE__) to
	exception message.	
	* src/AbstractCommand.cc
	* src/AbstractDiskWriter.cc
	* src/AbstractProxyResponseCommand.cc
	* src/BDE.h
	* src/BtAllowedFastMessage.cc
	* src/BtHandshakeMessageValidator.h
	* src/BtHaveAllMessage.cc
	* src/BtHaveNoneMessage.cc
	* src/BtPieceMessage.cc
	* src/BtRejectMessage.cc
	* src/ChunkedDecoder.cc
	* src/CookieStorage.cc
	* src/DHTAnnouncePeerMessage.cc
	* src/DHTEntryPointNameResolveCommand.cc
	* src/DHTMessageFactoryImpl.cc
	* src/DHTMessageTracker.cc
	* src/DHTRoutingTableDeserializer.cc