@@ -91,11 +91,6 @@ protected:
   virtual BDE process(const XmlRpcRequest& req, DownloadEngine* e);
 };
 
-class TellAllXmlRpcMethod:public XmlRpcMethod {
-protected:
-  virtual BDE process(const XmlRpcRequest& req, DownloadEngine* e);
-};
-
 class ChangeOptionXmlRpcMethod:public XmlRpcMethod {
 protected:
   virtual BDE process(const XmlRpcRequest& req, DownloadEngine* e);
